# flask-python

./: .envExample  .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml  server.py
account/: controller.py  model.py  route.py
bootstrap/: app.py  route.py  type.py
decorator/: db.py  validate.py
migrates/: create_account_24032025.py
model/: setup.py
modules/: env.py  logging.py
modules/database/: basemodel.py  setup.py
templates/: home.html
